src/objects/News__c.object
<CustomObject>
    <fields>
        <fullName>Headline__c</fullName>
        <label>Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>News</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>